Better events validation / better names and docs (#44)
* Better events validation

* better payload name, specs, fixes

* update codecov

* aye aye! and added spec
